fix: popup reposition issue for right overflow
Try to append the popup right aligned to the picker. If it results
in negative positioning, then position in between the window.

Fixes #10

--- a/src/scss/themes/bootstrap-theme/jquery.fonticonpicker.bootstrap.scss
+++ b/src/scss/themes/bootstrap-theme/jquery.fonticonpicker.bootstrap.scss
@@ -10,7 +10,7 @@
 		/* Icon selector */
 		.selector {
 			border: 0 none;
-			background-color: #fff;
+			background-color: transparent;
 			width: 102px;
 		}
 
