--- a/src/scss/themes/grey-theme/jquery.fonticonpicker.grey.scss
+++ b/src/scss/themes/grey-theme/jquery.fonticonpicker.grey.scss
@@ -13,7 +13,7 @@
 		/* Icon selector */
 		.selector {
 			border: 1px solid #EDEDED;
-			background-color: #fff;
+			background-color: transparent;
 		}
 		/* Selector open button */
 		.selector-button {
@@ -33,8 +33,11 @@
 			}
 		}
 		/* Selected icon */
-		.selected-icon i {
-			color: #404040;
+		.selected-icon {
+			background-color: #fff;
+			i {
+				color: #404040;
+			}
 		}
 		/* IconPicker Popup */
 		.selector-popup {
